2006-10-03 [backports]	2.5.2cvs3

	* src/folderview.c
	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
		From 2.5.2cvs16: Make expanding not recursive 
		in folderview
		From 2.5.2cvs{36,37,38}: Fix 'goto next unread' 
		after collapsing/expanding a node

2006-10-03 [backports]	2.5.2cvs2

	* src/prefs_account.c
	* src/gtk/authors.h
	* AUTHORS
		From 2.5.2cvs4: Fix bug #1024 (Array index out of
		range in sylpheed-claws-2.5.2)
		Patch by Ales Nosek <anosek@suse.cz>

2006-10-03 [backports]	2.5.2cvs1

	* configure.ac
		open the stable_2_5 branch

2006-09-26 [colin]	2.5.2

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.2 released

2006-09-26 [colin]	2.5.1cvs5

	* src/matcher.c
		Fix condition

2006-09-26 [colin]	2.5.1cvs4

	* src/mbox.c
		Revert cvs1 (useless as the message is printed 
		every 500 mails)

2006-09-26 [colin]	2.5.1cvs3

	* src/partial_download.c
		Fix crasher found by Alexsandar Urosevic

2006-09-26 [colin]	2.5.1cvs2

	* src/summaryview.c
		Fix bug #1023 (Sylpheed deletes too much messages)

2006-09-26 [ticho]	2.5.1cvs1

	* src/mbox.c
		Make use of gettext's multiple plurals for statusbar
		progress message.

2006-09-25 [paul]	2.5.1

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.1 released

2006-09-25 [colin]	2.5.0cvs3

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/spamassassin/spamassassin.c
		BogoFilter, Spamassassin: Fix double hook registering after
		visiting preferences
		Spamassassin, Clamav: Just set the mails to move instead of
		doing the move - caller will move the things at once.

2006-09-25 [colin]	2.5.0cvs2

	* src/imap.c
	* src/etpan/imap-thread.c
		Use UID SEARCH ALL instead of UID 1:*
		(braindead servers can't figure out that's
		the same...)

2006-09-25 [wwp]	2.5.0cvs1

	* src/message_search.c
		Added the ability to stop a running search (in message body).

2006-09-25 [paul]	2.5.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.0 released

2006-09-25 [paul]	2.4.0cvs214

	* po/cs.po
	* po/de.po
	* po/fi.po