@@ -1,3 +1,11 @@
+2006-10-03 [backports]	2.5.2cvs4
+
+	* src/filtering.c
+	* src/folder.c
+	* src/inc.c
+	* src/mbox.c
+		From 2.5.2cvs39: Fix "copy" rules
+
 2006-10-03 [backports]	2.5.2cvs3
 
 	* src/folderview.c
